# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ripe_ip_search"
authors = [{name = "Sergey M"}]
readme = "README.md"
license = {file = "LICENSE"}

classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Internet"
]

requires-python = ">=3.11.7"

dependencies = [
  "requests",
]

dynamic = ["version"]

# pip install -e '.[dev]'
# pip install -e '.[test]'
[project.optional-dependencies]
test = [
  "pytest",
]

dev = [
  "black",
  "pylint",
]

[project.urls]
Repository = "https://github.com/s3rgeym/ripe-ip-search.git"

[tool.setuptools.dynamic]
version = {attr = "ripe_ip_search.__version__"}

[project.scripts]
ripe-ip-search = 'ripe_ip_search:main'
